skan_tests/error/nomain.sk
int none() {
    return 1;
}